crates/test-generator/tests/snapshots/rust/test_generated_field_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Type { field1: x4 } = value { }

AST:
(source_file
  (expression_statement
    (if_expression
      condition: (let_condition
        pattern: (struct_pattern
          type: (type_identifier "Type")
          (field_pattern
            name: (field_identifier "field1")
            pattern: (identifier "x4")
          )
        )
        value: (identifier "value")
      )
      consequence: (block)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:23 to 1:25 }, name: "x4", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:8 to 1:12 }, name: "Type", kind: TypeIdentifier, context: None },
        Usage { position: { 1:15 to 1:21 }, name: "field1", kind: FieldInitializer, context: Some("field_initializer") },
        Usage { position: { 1:23 to 1:25 }, name: "x4", kind: Identifier, context: None },
        Usage { position: { 1:30 to 1:35 }, name: "value", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
