crates/test-generator/tests/snapshots/rust/test_generated_for_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
for item in vec { println!("{}", item); }

AST:
(source_file
  (expression_statement
    (for_expression
      pattern: (identifier "item")
      value: (identifier "vec")
      body: (block
        (expression_statement
          (macro_invocation
            macro: (identifier "println")
            (token_tree
              (string_literal ""{}""
                (string_content)
              )
              (identifier "item")
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:5 to 1:9 }, name: "item", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:13 to 1:16 }, name: "vec", kind: Identifier, context: None },
        Usage { position: { 1:19 to 1:26 }, name: "println", kind: Identifier, context: None },
        Usage { position: { 1:34 to 1:38 }, name: "item", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
