crates/test-generator/tests/snapshots/rust/test_generated_foreign_mod_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
extern "C" { fn extern_fn(); }

AST:
(source_file
  (foreign_mod_item
    (extern_modifier
      (string_literal ""C""
        (string_content)
      )
    )
    body: (declaration_list
      (function_signature_item
        name: (identifier "extern_fn")
        parameters: (parameters)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:17 to 1:26 }, name: "extern_fn", definition_type: FunctionDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
