crates/test-generator/tests/snapshots/rust/test_generated_function_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn3() -> i32 { let x5 = 42; x5 + 1 }

AST:
(source_file
  (function_item
    name: (identifier "test_fn3")
    parameters: (parameters)
    return_type: (primitive_type "i32")
    body: (block
      (let_declaration
        pattern: (identifier "x5")
        value: (integer_literal "42")
      )
      (binary_expression
        left: (identifier "x5")
        right: (integer_literal "1")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test_fn3",
            position: Position {
                start_line: 1,
                start_column: 4,
                end_line: 1,
                end_column: 12,
            },
            definition_type: FunctionDefinition,
        },
        Definition {
            name: "x5",
            position: Position {
                start_line: 1,
                start_column: 28,
                end_line: 1,
                end_column: 30,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "x5",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 37,
                end_line: 1,
                end_column: 39,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
