crates/test-generator/tests/snapshots/rust/test_generated_function_signature_item.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn4() -> i32;

AST:
(source_file
  (function_signature_item
    name: (identifier "test_fn4")
    parameters: (parameters)
    return_type: (primitive_type "i32")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:4 to 1:12 }, name: "test_fn4", definition_type: FunctionDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
