crates/test-generator/tests/snapshots/rust/test_generated_generic_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
match x { Vec::<T>::new() => x6, _ => x6 }

AST:
(source_file
  (expression_statement
    (match_expression
      value: (identifier "x")
      body: (match_block
        (match_arm
          pattern: (match_pattern
            (tuple_struct_pattern
              type: (scoped_identifier "Vec::<T>::new"
                path: (generic_type
                  type: (type_identifier "Vec")
                  type_arguments: (type_arguments
                    (type_identifier "T")
                  )
                )
                name: (identifier "new")
              )
            )
          )
          value: (identifier "x6")
        )
        (match_arm
          pattern: (match_pattern)
          value: (identifier "x6")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "x",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 8,
            },
            context: None,
        },
        Usage {
            name: "Vec",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 14,
            },
            context: Some(
                "scoped_identifier",
            ),
        },
        Usage {
            name: "T",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 18,
            },
            context: Some(
                "scoped_identifier",
            ),
        },
        Usage {
            name: "new",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 21,
                end_line: 1,
                end_column: 24,
            },
            context: Some(
                "scoped_identifier",
            ),
        },
        Usage {
            name: "x6",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 30,
                end_line: 1,
                end_column: 32,
            },
            context: None,
        },
        Usage {
            name: "x6",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 39,
                end_line: 1,
                end_column: 41,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
