crates/test-generator/tests/snapshots/rust/test_generated_higher_ranked_trait_bound.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn5<F>(f: F) where F: for<'a> Fn(&'a str) -> &'a str { }

AST:
(source_file
  (function_item
    name: (identifier "test_fn5")
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier "F")
      )
    )
    parameters: (parameters
      (parameter
        pattern: (identifier "f")
        type: (type_identifier "F")
      )
    )
    (where_clause
      (where_predicate
        left: (type_identifier "F")
        bounds: (trait_bounds
          (higher_ranked_trait_bound
            type_parameters: (type_parameters
              (lifetime_parameter
                name: (lifetime
                  (identifier "a")
                )
              )
            )
            type: (function_type
              trait: (type_identifier "Fn")
              parameters: (parameters
                (reference_type
                  (lifetime
                    (identifier "a")
                  )
                  type: (primitive_type "str")
                )
              )
              return_type: (reference_type
                (lifetime
                  (identifier "a")
                )
                type: (primitive_type "str")
              )
            )
          )
        )
      )
    )
    body: (block)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:4 to 1:12 }, name: "test_fn5", definition_type: FunctionDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:13 to 1:14 }, name: "F", definition_type: TypeDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:16 to 1:17 }, name: "f", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:19 to 1:20 }, name: "F", kind: TypeIdentifier, context: None },
        Usage { position: { 1:28 to 1:29 }, name: "F", kind: TypeIdentifier, context: None },
        Usage { position: { 1:39 to 1:41 }, name: "Fn", kind: TypeIdentifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
