crates/test-generator/tests/snapshots/rust/test_generated_identifier.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let identifier = 42;

AST:
(source_file
  (let_declaration
    pattern: (identifier "identifier")
    value: (integer_literal "42")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "identifier",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 15,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
