crates/test-generator/tests/snapshots/rust/test_generated_if_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Some(value1) = opt { value1 + 1 } else { 0 }

AST:
(source_file
  (expression_statement
    (if_expression
      condition: (let_condition
        pattern: (tuple_struct_pattern
          type: (identifier "Some")
          (identifier "value1")
        )
        value: (identifier "opt")
      )
      consequence: (block
        (binary_expression
          left: (identifier "value1")
          right: (integer_literal "1")
        )
      )
      alternative: (else_clause
        (block
          (integer_literal "0")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:13 to 1:19 }, name: "value1", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:8 to 1:12 }, name: "Some", kind: Identifier, context: None },
        Usage { position: { 1:23 to 1:26 }, name: "opt", kind: Identifier, context: None },
        Usage { position: { 1:29 to 1:35 }, name: "value1", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
